--- a/src/index.css
+++ b/src/index.css
@@ -253,7 +253,7 @@ section > div {
   background: var(--ash-black);
 }
 
-img {
+.photos {
   position: absolute;
   top: 0;
   left: 0;
@@ -263,8 +263,6 @@ img {
   height: 100%;
   object-fit: cover;
 }
-
-
 
 .back {
   padding: 100px;
